Added option to remove missing files.